kubernetes-manifests/hello.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cheapshirt.xyz
      http:
        paths:
          - backend:
              service:
                name: python-hello-world-external
                port:
                  number: 80
            pathType: Prefix
            path: /
